# ShoppingWithAI

./: .env  .gitignore  README.md  app_streamlit.py  hello.py  note.md  pyproject.toml  requirements.txt  test_api.py
data/: devices.json  docs.meta.json  docs.npy  docs.txt
scripts/: fix_devices.py  normalize_devices.py  run_cli.py
src/shopping_with_ai/: app.py  config.py  device_embeddings.py  devices.py  embeddings.py  graph.py  llm.py  price.py  rag.py  types.py
src/shopping_with_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
